# mri_simulator

./: CMakeLists.txt  README.md  package.xml
include/: OdeSolver.h  PlotGui.h  RungeKutta.h  SimplePendulumSolver.h  SingleSpinSimulation.h
src/: OdeSolver.cpp  PlotGui.cpp  RungeKutta.cpp  SimplePendulumSolver.cpp  SingleSpinSimulation.cpp  mri_sim.cpp  mri_test.cpp  pendulum_test.cpp  plotgui.ui
